# advent-of-code

./: .gitignore  README.md  requirements.txt
2021/src/: day4.lisp
2023/: CMakeLists.txt  README.md  day.cpp  day.hpp  day1.cpp  day1.hpp  day10.py  day11.py  day12.py  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.py  day7.py  day8.py  day9.py  main.cpp  requirements.txt  utils.py
2023/data/: day1.txt
2023/lib/: split_and_loop.cpp  trim.cpp
